Skip days already in db for copernicus (#76)

--- a/src/SatelliteCopernicus/pullCopernicusData.ipynb
+++ b/src/SatelliteCopernicus/pullCopernicusData.ipynb
@@ -22,6 +22,7 @@
     "import numpy as np\n",
     "import black\n",
     "import jupyter_black as bl  # type: ignore\n",
+    "from pandas import Index\n",
     "from datetime import datetime\n",
     "from CopernicusQueryBuilder import CopernicusQueryBuilder\n",
     "\n",
@@ -39,8 +40,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "LOG_FILE = \"data/scrape_copernicus_parallel.log\"\n",
-    "ERROR_FILE = \"data/scrape_copernicus_parallel.err\"\n",
+    "LOG_FILE = \"data/scrape_copernicus_parallel_20230703.log\"\n",
+    "ERROR_FILE = \"data/scrape_copernicus_parallel_20230703.err\"\n",
     "\n",
     "bl.load()\n",
     "load_dotenv(\"../docker/.env\")\n",
@@ -69,12 +70,11 @@
     "MIN_YEAR = 1995\n",
     "MAX_YEAR = 2023\n",
     "\n",
-    "years = [\n",
-    "    str(year) for year in range(MIN_YEAR, MAX_YEAR + 1)\n",
-    "]  # the year range we want to pull data from\n",
-    "months = [\n",
-    "    str(month) for month in range(MIN_MONTH, MAX_MONTH + 1)\n",
-    "]  # the month range we want to pull data from\n",
+    "# the year range we want to pull data from\n",
+    "years = [str(year) for year in range(MIN_YEAR, MAX_YEAR + 1)]\n",
+    "\n",
+    "# the month range we want to pull data from\n",
+    "months = [str(month) for month in range(MIN_MONTH, MAX_MONTH + 1)]\n",
     "\n",
     "ATTRS = [  # the attributes we want to pull data for\n",
     "    \"2m_dewpoint_temperature\",\n",
@@ -156,6 +156,22 @@
     "    )\n",
     "\n",
     "    return agRegions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getCompleteDates(conn: sq.engine.Connection) -> pd.DataFrame:\n",
+    "    \"\"\"year month day\"\"\"\n",
+    "    query = sq.text(\n",
+    "        \"select distinct year, month, day from agg_day_copernicus_satellite_data\"\n",
+    "    )\n",
+    "    dates = pd.read_sql(query, conn)\n",
+    "\n",
+    "    return dates"
    ]
   },
   {
@@ -316,9 +332,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pandas import Index\n",
-    "\n",
-    "\n",
     "def generateDailyAggregate(df: pd.DataFrame) -> pd.DataFrame:\n",
     "    try:\n",
     "        aggregate = (\n",
@@ -554,6 +567,8 @@
     "\n",
     "    # Load the agriculture region geometries from the database\n",
     "    agRegions = loadGeometry(conn)\n",
+    "\n",
+    "    completedDf = getCompleteDates(conn)\n",
     "    db.cleanup()  # Disconnect from the database (workers maintain their own connections)\n",
     "\n",
     "    # Creates the list of arguments (stored as tuples) used in the multiple processes for pullSateliteData(agRegions, year, month, days, outputFile)\n",
@@ -568,7 +583,21 @@
     "            days = [str(day) for day in range(1, numDays + 1)]\n",
     "            outputFile = f\"data/copernicus_{year}_{month}\"\n",
     "\n",
-    "            jobArgs.append(tuple((agRegions, delay, year, month, days, outputFile)))\n",
+    "            # removes the days that have already been completed\n",
+    "            completedDaysDf = completedDf.loc[\n",
+    "                (completedDf[\"year\"] == int(year))\n",
+    "                & (completedDf[\"month\"] == int(month))\n",
+    "            ]\n",
+    "            completedDays = completedDaysDf[\"day\"].tolist()\n",
+    "            incompleteDays = []\n",
+    "            for day in days:\n",
+    "                if int(day) not in completedDays:\n",
+    "                    incompleteDays.append(day)\n",
+    "\n",
+    "            if len(incompleteDays) > 0:\n",
+    "                jobArgs.append(\n",
+    "                    tuple((agRegions, delay, year, month, incompleteDays, outputFile))\n",
+    "                )\n",
     "\n",
     "    # Handles the multiple processes\n",
     "    pool = mp.Pool(NUM_WORKERS)  # Defines the number of workers\n",
@@ -594,6 +623,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.10"
   },
   "orig_nbformat": 4,
   "vscode": {
