--- a/src/Ergot/ergot_visualization.ipynb
+++ b/src/Ergot/ergot_visualization.ipynb
@@ -47,6 +47,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Visualization before aggregation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -72,9 +80,15 @@
    "outputs": [],
    "source": [
     "# car : canadian agriculture region\n",
-    "ergot_df.loc[ergot_df[\"province\"] == \"MB\", \"car_uid\"] = ergot_df.loc[ergot_df[\"province\"] == \"MB\", \"crop_district\"] + 4600\n",
-    "ergot_df.loc[ergot_df[\"province\"] == \"SK\", \"car_uid\"] = (ergot_df.loc[ergot_df[\"province\"] == \"SK\", \"crop_district\"] - 1) + 4700\n",
-    "ergot_df.loc[ergot_df[\"province\"] == \"AB\", \"car_uid\"] = (ergot_df.loc[ergot_df[\"province\"] == \"AB\", \"crop_district\"] * 10) + 4800"
+    "ergot_df.loc[ergot_df[\"province\"] == \"MB\", \"car_uid\"] = (\n",
+    "    ergot_df.loc[ergot_df[\"province\"] == \"MB\", \"crop_district\"] + 4600\n",
+    ")\n",
+    "ergot_df.loc[ergot_df[\"province\"] == \"SK\", \"car_uid\"] = (\n",
+    "    ergot_df.loc[ergot_df[\"province\"] == \"SK\", \"crop_district\"] - 1\n",
+    ") + 4700\n",
+    "ergot_df.loc[ergot_df[\"province\"] == \"AB\", \"car_uid\"] = (\n",
+    "    ergot_df.loc[ergot_df[\"province\"] == \"AB\", \"crop_district\"] * 10\n",
+    ") + 4800"
    ]
   },
   {
@@ -83,7 +97,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ergot_df.drop(columns=['crop_district', 'sample_id'], inplace=True)"
+    "ergot_df.drop(columns=[\"crop_district\", \"sample_id\"], inplace=True)"
    ]
   },
   {
@@ -92,7 +106,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ergot_df['car_uid'] = pd.to_numeric(ergot_df['car_uid'], downcast='integer')\n",
+    "ergot_df[\"car_uid\"] = pd.to_numeric(ergot_df[\"car_uid\"], downcast=\"integer\")\n",
     "ergot_df"
    ]
   },
@@ -103,25 +117,30 @@
    "outputs": [],
    "source": [
     "# sample with incidence = True: per year, per province\n",
-    "samples_df = ergot_df[ergot_df['incidence'] == True].groupby(['province', 'year'])['incidence'].count().reset_index()\n",
-    "mb_df = samples_df[samples_df['province'] == 'MB']\n",
-    "ab_df = samples_df[samples_df['province'] == 'AB']\n",
-    "sk_df = samples_df[samples_df['province'] == 'SK']\n",
+    "samples_df = (\n",
+    "    ergot_df[ergot_df[\"incidence\"] == True]\n",
+    "    .groupby([\"province\", \"year\"])[\"incidence\"]\n",
+    "    .count()\n",
+    "    .reset_index()\n",
+    ")\n",
+    "mb_df = samples_df[samples_df[\"province\"] == \"MB\"]\n",
+    "ab_df = samples_df[samples_df[\"province\"] == \"AB\"]\n",
+    "sk_df = samples_df[samples_df[\"province\"] == \"SK\"]\n",
     "\n",
-    "year = mb_df['year'].tolist()\n",
-    "mb_incidence = mb_df['incidence'].tolist()\n",
-    "ab_incidence = ab_df['incidence'].tolist()\n",
-    "sk_incidence = sk_df['incidence'].tolist()\n",
+    "year = mb_df[\"year\"].tolist()\n",
+    "mb_incidence = mb_df[\"incidence\"].tolist()\n",
+    "ab_incidence = ab_df[\"incidence\"].tolist()\n",
+    "sk_incidence = sk_df[\"incidence\"].tolist()\n",
     "\n",
     "\n",
-    "plt.figure(figsize=(10,5))\n",
-    "plt.xlabel('Year')\n",
-    "plt.ylabel('Incidence')\n",
+    "plt.figure(figsize=(10, 5))\n",
+    "plt.xlabel(\"Year\")\n",
+    "plt.ylabel(\"Incidence\")\n",
     "plt.plot(year, mb_incidence, color=\"blue\")\n",
     "plt.plot(year, ab_incidence, color=\"green\")\n",
     "plt.plot(year, sk_incidence, color=\"red\")\n",
-    "plt.legend(['Manitoba', 'Alberta', 'Saskatchewan'])\n",
-    "plt.show()\n"
+    "plt.legend([\"Manitoba\", \"Alberta\", \"Saskatchewan\"])\n",
+    "plt.show()"
    ]
   },
   {
@@ -130,9 +149,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ratio_df = ergot_df.groupby(['province', 'year'])['incidence'].count().reset_index()\n",
-    "ratio_df['ratio'] = (samples_df['incidence']/ratio_df['incidence']).to_frame()\n",
-    "ratio_df.drop(columns = {'incidence'}, inplace=True)\n",
+    "ratio_df = ergot_df.groupby([\"province\", \"year\"])[\"incidence\"].count().reset_index()\n",
+    "ratio_df[\"ratio\"] = (samples_df[\"incidence\"] / ratio_df[\"incidence\"]).to_frame()\n",
+    "ratio_df.drop(columns={\"incidence\"}, inplace=True)\n",
     "ratio_df"
    ]
   },
@@ -143,27 +162,51 @@
    "outputs": [],
    "source": [
     "# Min, max for each province\n",
-    "mb_ratio = ratio_df[ratio_df['province'] == 'MB']['ratio'].tolist()\n",
-    "ab_ratio = ratio_df[ratio_df['province'] == 'AB']['ratio'].tolist()\n",
-    "sk_ratio = ratio_df[ratio_df['province'] == 'SK']['ratio'].tolist()\n",
+    "mb_ratio = ratio_df[ratio_df[\"province\"] == \"MB\"][\"ratio\"].tolist()\n",
+    "ab_ratio = ratio_df[ratio_df[\"province\"] == \"AB\"][\"ratio\"].tolist()\n",
+    "sk_ratio = ratio_df[ratio_df[\"province\"] == \"SK\"][\"ratio\"].tolist()\n",
     "\n",
     "\n",
-    "plt.figure(figsize=(10,5))\n",
-    "plt.xlabel('Year')\n",
-    "plt.ylabel('Incidence')\n",
+    "plt.figure(figsize=(10, 5))\n",
+    "plt.xlabel(\"Year\")\n",
+    "plt.ylabel(\"Incidence\")\n",
     "plt.plot(year, mb_ratio, color=\"blue\")\n",
     "plt.plot(year, ab_ratio, color=\"green\")\n",
     "plt.plot(year, sk_ratio, color=\"red\")\n",
-    "plt.legend(['Manitoba', 'Alberta', 'Saskatchewan'])\n",
+    "plt.legend([\"Manitoba\", \"Alberta\", \"Saskatchewan\"])\n",
     "plt.show()\n",
     "\n",
-    "print('Highest ratio in MB: {}, in year: {}'.format(max(mb_ratio), mb_ratio.index(max(mb_ratio)) + 1995))\n",
-    "print('Highest ratio in AB: {}, in year: {}'.format(max(ab_ratio), ab_ratio.index(max(ab_ratio)) + 1995))\n",
-    "print('Highest ratio in SK: {}, in year: {}'.format(max(sk_ratio), sk_ratio.index(max(sk_ratio)) + 1995))\n",
+    "print(\n",
+    "    \"Highest ratio in MB: {}, in year: {}\".format(\n",
+    "        max(mb_ratio), mb_ratio.index(max(mb_ratio)) + 1995\n",
+    "    )\n",
+    ")\n",
+    "print(\n",
+    "    \"Highest ratio in AB: {}, in year: {}\".format(\n",
+    "        max(ab_ratio), ab_ratio.index(max(ab_ratio)) + 1995\n",
+    "    )\n",
+    ")\n",
+    "print(\n",
+    "    \"Highest ratio in SK: {}, in year: {}\".format(\n",
+    "        max(sk_ratio), sk_ratio.index(max(sk_ratio)) + 1995\n",
+    "    )\n",
+    ")\n",
     "\n",
-    "print('Lowest ratio in MB: {}, in year: {}'.format(min(mb_ratio), mb_ratio.index(min(mb_ratio)) + 1995))\n",
-    "print('Lowest ratio in AB: {}, in year: {}'.format(min(ab_ratio), ab_ratio.index(min(ab_ratio)) + 1995))\n",
-    "print('Lowest ratio in SK: {}, in year: {}'.format(min(sk_ratio), sk_ratio.index(min(sk_ratio)) + 1995))"
+    "print(\n",
+    "    \"Lowest ratio in MB: {}, in year: {}\".format(\n",
+    "        min(mb_ratio), mb_ratio.index(min(mb_ratio)) + 1995\n",
+    "    )\n",
+    ")\n",
+    "print(\n",
+    "    \"Lowest ratio in AB: {}, in year: {}\".format(\n",
+    "        min(ab_ratio), ab_ratio.index(min(ab_ratio)) + 1995\n",
+    "    )\n",
+    ")\n",
+    "print(\n",
+    "    \"Lowest ratio in SK: {}, in year: {}\".format(\n",
+    "        min(sk_ratio), sk_ratio.index(min(sk_ratio)) + 1995\n",
+    "    )\n",
+    ")"
    ]
   },
   {
@@ -172,10 +215,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "total_df = ergot_df.groupby(['year', 'car_uid'])['incidence'].count().reset_index()\n",
-    "region_df = ergot_df[ergot_df['incidence'] == True].groupby(['province', 'year', 'car_uid'])['incidence'].count().reset_index()\n",
-    "region_df['ratio'] = (region_df['incidence']/total_df['incidence']) * 100\n",
-    "region_df\n"
+    "total_df = ergot_df.groupby([\"year\", \"car_uid\"])[\"incidence\"].count().reset_index()\n",
+    "region_df = (\n",
+    "    ergot_df[ergot_df[\"incidence\"] == True]\n",
+    "    .groupby([\"province\", \"year\", \"car_uid\"])[\"incidence\"]\n",
+    "    .count()\n",
+    "    .reset_index()\n",
+    ")\n",
+    "region_df[\"ratio\"] = (region_df[\"incidence\"] / total_df[\"incidence\"]) * 100\n",
+    "region_df"
    ]
   },
   {
@@ -196,7 +244,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def color_map_color(value, cmap_name='Wistia', vmin=0, vmax=100):\n",
+    "def color_map_color(value, cmap_name=\"Wistia\", vmin=0, vmax=100):\n",
     "    norm = colors.Normalize(vmin=vmin, vmax=vmax)\n",
     "    cmap = cm.get_cmap(cmap_name)\n",
     "    rgb = cmap(norm(abs(value)))[:3]\n",
@@ -212,9 +260,9 @@
    "source": [
     "def get_color(ratio_year):\n",
     "    color_map = []\n",
-    "    for district in agRegions['district'].tolist():\n",
-    "        if district in ratio_year['car_uid'].tolist():\n",
-    "            ratio = ratio_year[ratio_year['car_uid'] == district]['ratio'].tolist()[0]\n",
+    "    for district in agRegions[\"district\"].tolist():\n",
+    "        if district in ratio_year[\"car_uid\"].tolist():\n",
+    "            ratio = ratio_year[ratio_year[\"car_uid\"] == district][\"ratio\"].tolist()[0]\n",
     "            color_map.append(color_map_color(ratio))\n",
     "        else:\n",
     "            color_map.append(color_map_color(0))\n",
@@ -254,7 +302,7 @@
    "outputs": [],
    "source": [
     "for year in range(1995, 2023):\n",
-    "    ratio_year = region_df.loc[region_df['year'] == year]\n",
+    "    ratio_year = region_df.loc[region_df[\"year\"] == year]\n",
     "    color = get_color(ratio_year)\n",
     "    plot_map(color, year)"
    ]
@@ -284,8 +332,79 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "agg_ergot_df[\"severity\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def stats(data: list):\n",
+    "    # assign your quartiles, limits and iq3\n",
+    "    q1, q2, q3 = np.percentile(data, [25, 50, 75])\n",
+    "    iqr = q3 - q1\n",
+    "    print(\"iqr: \", iqr)\n",
+    "    lower_bound = q1 - 1.5 * iqr\n",
+    "    upper_bound = q3 + 1.5 * iqr\n",
+    "\n",
+    "    # create conditions to isolate the outliers\n",
+    "    outliers = data[(data < lower_bound) | (data > upper_bound)]\n",
+    "    return q1, q2, q3, outliers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = np.array(agg_ergot_df[\"severity\"])\n",
+    "q1, q2, q3, outliers = stats(data)\n",
+    "print(\"number of outliers:\", len(outliers))\n",
+    "print(\"q1, q2, q3: {}, {}, {}\".format(q1, q2, q3))\n",
+    "print(outliers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wo_outliers = pd.DataFrame(data, columns=[\"severity\"])\n",
+    "wo_outliers = wo_outliers[~wo_outliers[\"severity\"].isin(outliers)]\n",
+    "wo_outliers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wo_outliers.boxplot(column=[\"severity\"], showfliers=False, autorange=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# incident/present of urgot information by district\n",
-    "present_df = agg_ergot_df[['year', 'has_ergot', 'district', 'present_prev1', 'present_prev2', 'present_prev3', 'present_in_neighbor']].drop_duplicates()\n",
+    "present_df = agg_ergot_df[\n",
+    "    [\n",
+    "        \"year\",\n",
+    "        \"has_ergot\",\n",
+    "        \"district\",\n",
+    "        \"present_prev1\",\n",
+    "        \"present_prev2\",\n",
+    "        \"present_prev3\",\n",
+    "        \"present_in_neighbor\",\n",
+    "    ]\n",
+    "].drop_duplicates()\n",
     "present_df"
    ]
   },
@@ -296,20 +415,40 @@
    "outputs": [],
    "source": [
     "# find percentage of having ergot in previous year -> having ergot in this year\n",
-    "percent1 = present_df[(present_df['has_ergot'] == True) & (present_df['present_prev1'] == True)].shape[0]/present_df.shape[0]\n",
-    "print('Percent of having ergot when prev year had ergot: ', percent1)\n",
+    "percent1 = (\n",
+    "    present_df[\n",
+    "        (present_df[\"has_ergot\"] == True) & (present_df[\"present_prev1\"] == True)\n",
+    "    ].shape[0]\n",
+    "    / present_df.shape[0]\n",
+    ")\n",
+    "print(\"Percent of having ergot when prev year had ergot: \", percent1)\n",
     "\n",
     "# find percentage of having ergot in previous 2 years -> having ergot in this year\n",
-    "percent2 = present_df[(present_df['has_ergot'] == True) & (present_df['present_prev2'] == True)].shape[0]/present_df.shape[0]\n",
-    "print('Percent of having ergot when prev 2 year had ergot: ', percent2)\n",
+    "percent2 = (\n",
+    "    present_df[\n",
+    "        (present_df[\"has_ergot\"] == True) & (present_df[\"present_prev2\"] == True)\n",
+    "    ].shape[0]\n",
+    "    / present_df.shape[0]\n",
+    ")\n",
+    "print(\"Percent of having ergot when prev 2 year had ergot: \", percent2)\n",
     "\n",
     "# find percentage of having ergot when having ergot in previous 3 year\n",
-    "percent3 = present_df[(present_df['has_ergot'] == True) & (present_df['present_prev3'] == True)].shape[0]/present_df.shape[0]\n",
-    "print('Percent of having ergot when prev 3 year had ergot: ', percent3)\n",
+    "percent3 = (\n",
+    "    present_df[\n",
+    "        (present_df[\"has_ergot\"] == True) & (present_df[\"present_prev3\"] == True)\n",
+    "    ].shape[0]\n",
+    "    / present_df.shape[0]\n",
+    ")\n",
+    "print(\"Percent of having ergot when prev 3 year had ergot: \", percent3)\n",
     "\n",
     "# find percentage of having ergot when neighbor has ergot\n",
-    "percent4 = present_df[(present_df['has_ergot'] == True) & (present_df['present_in_neighbor'] == True)].shape[0]/present_df.shape[0]\n",
-    "print('Percent of having ergot when neighbor is having ergot: ', percent4)\n"
+    "percent4 = (\n",
+    "    present_df[\n",
+    "        (present_df[\"has_ergot\"] == True) & (present_df[\"present_in_neighbor\"] == True)\n",
+    "    ].shape[0]\n",
+    "    / present_df.shape[0]\n",
+    ")\n",
+    "print(\"Percent of having ergot when neighbor is having ergot: \", percent4)"
    ]
   },
   {
@@ -319,7 +458,17 @@
    "outputs": [],
    "source": [
     "# severity information by district\n",
-    "severity_df = agg_ergot_df[['year', 'district', 'has_ergot', 'sum_severity', 'severity_prev1', 'severity_prev2', 'severity_prev3']].drop_duplicates()\n",
+    "severity_df = agg_ergot_df[\n",
+    "    [\n",
+    "        \"year\",\n",
+    "        \"district\",\n",
+    "        \"has_ergot\",\n",
+    "        \"sum_severity\",\n",
+    "        \"severity_prev1\",\n",
+    "        \"severity_prev2\",\n",
+    "        \"severity_prev3\",\n",
+    "    ]\n",
+    "].drop_duplicates()\n",
     "severity_df"
    ]
   },
@@ -329,16 +478,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "severity_df[(~severity_df[\"has_ergot\"]) & (severity_df[\"sum_severity\"] > 0)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# assign your quartiles, limits and iq3\n",
-    "data = np.array(severity_df['sum_severity'])\n",
-    "q1, q3 = np.percentile(data, [25, 75])\n",
-    "iqr = q3 - q1\n",
-    "lower_bound = q1 - 1.5*iqr\n",
-    "upper_bound = q3 + 1.5*iqr\n",
-    "\n",
-    "#create conditions to isolate the outliers\n",
-    "outliers = data[(data < lower_bound) | (data > upper_bound)]\n",
-    "print('number of outliers:', len(outliers))\n",
+    "data = np.array(severity_df[\"sum_severity\"])\n",
+    "q1, q2, q3, outliers = stats(data)\n",
+    "print(\"number of outliers:\", len(outliers))\n",
+    "print(\"q1, q2, q3: {}, {}, {}\".format(q1, q2, q3))\n",
     "print(outliers)"
    ]
   },
@@ -351,7 +504,7 @@
     "# plt.rcParams.update({'figure.figsize':(7,5), 'figure.dpi':100})\n",
     "\n",
     "# plot\n",
-    "severity_df.plot.box(title='Severity', column=['sum_severity'], showfliers=False)"
+    "severity_df.plot.box(title=\"Severity\", column=[\"sum_severity\"], showfliers=False)"
    ]
   }
  ],
