fixed linter issues

--- a/src/Ergot/ergot_visualization.ipynb
+++ b/src/Ergot/ergot_visualization.ipynb
@@ -6,16 +6,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "import os\n",
+    "from matplotlib import pyplot as plt  # type: ignore\n",
+    "from matplotlib import cm, colors  # type: ignore\n",
     "from dotenv import load_dotenv\n",
-    "\n",
-    "import geopandas as gpd\n",
+    "import geopandas as gpd  # type: ignore\n",
     "import sqlalchemy as sq\n",
-    "import pandas as pd\n",
-    "from matplotlib import pyplot as plt\n",
-    "from matplotlib import cm, colors\n",
+    "import pandas as pd  # type: ignore\n",
     "import numpy as np\n",
+    "import os, sys\n",
     "\n",
     "sys.path.append(\"../\")\n",
     "from Shared.DataService import DataService"
@@ -41,8 +39,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "if (\n",
+    "    PG_DB is None\n",
+    "    or PG_ADDR is None\n",
+    "    or PG_PORT is None\n",
+    "    or PG_USER is None\n",
+    "    or PG_PW is None\n",
+    "):\n",
+    "    raise ValueError(\"Environment variables not set\")\n",
+    "\n",
     "# connecting to database\n",
-    "db = DataService(PG_DB, PG_ADDR, PG_PORT, PG_USER, PG_PW)\n",
+    "db = DataService(PG_DB, PG_ADDR, int(PG_PORT), PG_USER, PG_PW)\n",
     "conn = db.connect()"
    ]
   },
@@ -60,7 +67,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "query = sq.text(\"select * FROM public.ergot_sample\")\n",
+    "query = sq.text(\"SELECT * FROM public.ergot_sample\")\n",
     "ergot_df = pd.read_sql(query, conn)"
    ]
   },
@@ -79,7 +86,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# car : canadian agriculture region\n",
     "ergot_df.loc[ergot_df[\"province\"] == \"MB\", \"car_uid\"] = (\n",
     "    ergot_df.loc[ergot_df[\"province\"] == \"MB\", \"crop_district\"] + 4600\n",
     ")\n",
@@ -244,11 +250,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def color_map_color(value, cmap_name=\"Wistia\", vmin=0, vmax=100):\n",
+    "def color_map_color(\n",
+    "    value: int, cmap_name=\"Wistia\", vmin: int = 0, vmax: int = 100\n",
+    ") -> str:\n",
     "    norm = colors.Normalize(vmin=vmin, vmax=vmax)\n",
     "    cmap = cm.get_cmap(cmap_name)\n",
     "    rgb = cmap(norm(abs(value)))[:3]\n",
     "    color = colors.rgb2hex(rgb)\n",
+    "\n",
     "    return color"
    ]
   },
@@ -258,14 +267,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_color(ratio_year):\n",
+    "def get_color(ratio_year: pd.DataFrame) -> pd.Series:\n",
     "    color_map = []\n",
+    "\n",
     "    for district in agRegions[\"district\"].tolist():\n",
     "        if district in ratio_year[\"car_uid\"].tolist():\n",
     "            ratio = ratio_year[ratio_year[\"car_uid\"] == district][\"ratio\"].tolist()[0]\n",
     "            color_map.append(color_map_color(ratio))\n",
     "        else:\n",
     "            color_map.append(color_map_color(0))\n",
+    "\n",
     "    return pd.Series(color_map)"
    ]
   },
@@ -275,7 +286,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_map(color_map, year):\n",
+    "def plot_map(color_map: pd.Series, year: int):\n",
     "    minx, miny, maxx, maxy = agRegions.total_bounds\n",
     "    fig, ax = plt.subplots(figsize=(20, 20))\n",
     "    ax.set_ylim(miny, maxy)\n",
@@ -321,7 +332,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "query = sq.text(\"select * FROM public.agg_ergot_samples\")\n",
+    "query = sq.text(\"SELECT * FROM public.agg_ergot_samples\")\n",
     "agg_ergot_df = pd.read_sql(query, conn)\n",
     "agg_ergot_df"
    ]
@@ -361,7 +372,7 @@
    "outputs": [],
    "source": [
     "data = np.array(agg_ergot_df[\"severity\"])\n",
-    "q1, q2, q3, outliers = stats(data)\n",
+    "q1, q2, q3, outliers = stats(data.tolist())\n",
     "print(\"number of outliers:\", len(outliers))\n",
     "print(\"q1, q2, q3: {}, {}, {}\".format(q1, q2, q3))\n",
     "print(outliers)"
@@ -489,7 +500,7 @@
    "source": [
     "# assign your quartiles, limits and iq3\n",
     "data = np.array(severity_df[\"sum_severity\"])\n",
-    "q1, q2, q3, outliers = stats(data)\n",
+    "q1, q2, q3, outliers = stats(data.tolist())\n",
     "print(\"number of outliers:\", len(outliers))\n",
     "print(\"q1, q2, q3: {}, {}, {}\".format(q1, q2, q3))\n",
     "print(outliers)"
