updated car_uid to district

--- a/src/Ergot/ergot_visualization.ipynb
+++ b/src/Ergot/ergot_visualization.ipynb
@@ -86,13 +86,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ergot_df.loc[ergot_df[\"province\"] == \"MB\", \"car_uid\"] = (\n",
+    "ergot_df.loc[ergot_df[\"province\"] == \"MB\", \"district\"] = (\n",
     "    ergot_df.loc[ergot_df[\"province\"] == \"MB\", \"crop_district\"] + 4600\n",
     ")\n",
-    "ergot_df.loc[ergot_df[\"province\"] == \"SK\", \"car_uid\"] = (\n",
+    "ergot_df.loc[ergot_df[\"province\"] == \"SK\", \"district\"] = (\n",
     "    ergot_df.loc[ergot_df[\"province\"] == \"SK\", \"crop_district\"] - 1\n",
     ") + 4700\n",
-    "ergot_df.loc[ergot_df[\"province\"] == \"AB\", \"car_uid\"] = (\n",
+    "ergot_df.loc[ergot_df[\"province\"] == \"AB\", \"district\"] = (\n",
     "    ergot_df.loc[ergot_df[\"province\"] == \"AB\", \"crop_district\"] * 10\n",
     ") + 4800"
    ]
@@ -112,7 +112,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ergot_df[\"car_uid\"] = pd.to_numeric(ergot_df[\"car_uid\"], downcast=\"integer\")\n",
+    "ergot_df[\"district\"] = pd.to_numeric(ergot_df[\"district\"], downcast=\"integer\")\n",
     "ergot_df"
    ]
   },
@@ -221,10 +221,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "total_df = ergot_df.groupby([\"year\", \"car_uid\"])[\"incidence\"].count().reset_index()\n",
+    "total_df = ergot_df.groupby([\"year\", \"district\"])[\"incidence\"].count().reset_index()\n",
     "region_df = (\n",
     "    ergot_df[ergot_df[\"incidence\"] == True]\n",
-    "    .groupby([\"province\", \"year\", \"car_uid\"])[\"incidence\"]\n",
+    "    .groupby([\"province\", \"year\", \"district\"])[\"incidence\"]\n",
     "    .count()\n",
     "    .reset_index()\n",
     ")\n",
@@ -271,8 +271,8 @@
     "    color_map = []\n",
     "\n",
     "    for district in agRegions[\"district\"].tolist():\n",
-    "        if district in ratio_year[\"car_uid\"].tolist():\n",
-    "            ratio = ratio_year[ratio_year[\"car_uid\"] == district][\"ratio\"].tolist()[0]\n",
+    "        if district in ratio_year[\"district\"].tolist():\n",
+    "            ratio = ratio_year[ratio_year[\"district\"] == district][\"ratio\"].tolist()[0]\n",
     "            color_map.append(color_map_color(ratio))\n",
     "        else:\n",
     "            color_map.append(color_map_color(0))\n",
@@ -535,7 +535,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.8.0"
   },
   "orig_nbformat": 4
  },
