deleted importErgot and made linter happy

--- a/src/Ergot/ergot_visualization.ipynb
+++ b/src/Ergot/ergot_visualization.ipynb
@@ -157,7 +157,7 @@
    "source": [
     "ratio_df = ergot_df.groupby([\"province\", \"year\"])[\"incidence\"].count().reset_index()\n",
     "ratio_df[\"ratio\"] = (samples_df[\"incidence\"] / ratio_df[\"incidence\"]).to_frame()\n",
-    "ratio_df.drop(columns={\"incidence\"}, inplace=True)\n",
+    "ratio_df.drop(column=[\"incidence\"], inplace=True)\n",
     "ratio_df"
    ]
   },
@@ -312,10 +312,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for year in range(1995, 2023):\n",
+    "for currYear in range(1995, 2023):\n",
     "    ratio_year = region_df.loc[region_df[\"year\"] == year]\n",
     "    color = get_color(ratio_year)\n",
-    "    plot_map(color, year)"
+    "    plot_map(color, currYear)"
    ]
   },
   {
