updated drop cmd

--- a/src/Ergot/ergot_visualization.ipynb
+++ b/src/Ergot/ergot_visualization.ipynb
@@ -157,7 +157,7 @@
    "source": [
     "ratio_df = ergot_df.groupby([\"province\", \"year\"])[\"incidence\"].count().reset_index()\n",
     "ratio_df[\"ratio\"] = (samples_df[\"incidence\"] / ratio_df[\"incidence\"]).to_frame()\n",
-    "ratio_df.drop(column=[\"incidence\"], inplace=True)\n",
+    "ratio_df.drop(columns=[\"incidence\"], inplace=True)\n",
     "ratio_df"
    ]
   },
